feat: implement sell stock backend
