# services/backend/src/main/kotlin/org/dpp/tradelab/stocktrading/messaging/OrderType.kt
@@ -1,6 +1,0 @@
-package org.dpp.tradelab.stocktrading.messaging
-
-enum class OrderType {
-    BUY,
-    SELL
-}
